monospace font fallback. styled hr in info header. sauce metadata alignment fix.

--- a/ext/css/layout.css
+++ b/ext/css/layout.css
@@ -124,6 +124,12 @@ header {
   top: 0em;
 }
 
+header hr {
+  border: 0;
+  border-top: 1px solid var(--has-text-grey-dark);
+  width: 98%;
+}
+
 header strong,
 header #moreSettings {
   cursor: pointer;
